--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
     "license": "MIT",
     "require": {
         "php": ">=8.0.0",
-        "symfony/yaml": "^5.2",
-        "symfony/string": "^5.2",
+        "symfony/yaml": "~5.2",
+        "symfony/string": "~5.2",
         "psr/cache": "~1.0",
         "apex/container": "~0.3", 
-        "league/uri": "^6.4", 
-        "michelf/php-markdown": "^1.9",
-        "apex/cluster": "^0.1.2"
+        "league/uri": "~6.4", 
+        "michelf/php-markdown": "~1.9",
+        "apex/cluster": "~0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
