--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,16 @@
         "php": ">=8.0.0",
         "symfony/yaml": "~5.2",
         "symfony/string": "~5.2",
-        "psr/cache": "~2.0",
+        "psr/cache": "~1.0",
         "apex/container": "~0.3", 
         "league/uri": "~6.4", 
         "michelf/php-markdown": "~1.9",
-        "apex/cluster": "~0.1"
+        "apex/cluster": "~0.1",
+        "brick/phonenumber": "^0.4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "apex/signer": "^0.1.2"
     },
     "suggest": {
         "symfony/cache": "^5.2", 
