--- a/composer.json
+++ b/composer.json
@@ -15,19 +15,19 @@
     }, 
     "license": "MIT",
     "require": {
-        "php": ">=8.0.0",
-        "symfony/yaml": "~5.2",
-        "symfony/string": "~5.2",
+        "php": ">=8.0",
+        "symfony/yaml": "^6.0",
+        "symfony/string": "6.0",
         "psr/cache": "~1.0",
-        "apex/container": "~0.3", 
-        "league/uri": "~6.4", 
-        "michelf/php-markdown": "~1.9",
-        "apex/cluster": "~0.1",
-        "brick/phonenumber": "^0.4.0"
+        "apex/container": "^2.0", 
+        "league/uri": "^6.5", 
+        "michelf/php-markdown": "^1.9",
+        "apex/cluster": "^2.0",
+        "brick/phonenumber": "^0.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "apex/signer": "^0.1.2"
+        "apex/signer": "^2.0"
     },
     "suggest": {
         "symfony/cache": "^5.2", 
