--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "php": ">=8.0",
         "symfony/yaml": "^6.0",
         "symfony/string": "6.0",
-        "psr/cache": "~1.0",
+        "psr/cache": "^2.0",
         "apex/container": "^2.0", 
         "league/uri": "^6.5", 
         "michelf/php-markdown": "^1.9",
@@ -30,7 +30,7 @@
         "apex/signer": "^2.0"
     },
     "suggest": {
-        "symfony/cache": "^5.2", 
+        "symfony/cache": "^6.0", 
         "apex/debugger": ">=0.1.4"
     }, 
     "autoload": {
