--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "symfony/yaml": "^6.0",
         "symfony/string": "6.0",
         "psr/cache": "^2.0",
-        "apex/container": "^2.0", 
+        "apex/container": ">=2.0", 
         "league/uri": "^6.5", 
         "michelf/php-markdown": "^1.9",
         "apex/cluster": "^2.0",
