--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,15 @@
     }, 
     "license": "MIT",
     "require": {
-        "php": ">=8.0",
+        "php": ">=8.1",
         "symfony/yaml": "^6.0",
         "symfony/string": "6.0",
         "psr/cache": "^2.0",
         "apex/container": "^2.0", 
-        "league/uri": "^6.5", 
-        "michelf/php-markdown": "^1.9",
+        "league/uri": "^7.3", 
         "apex/cluster": "^2.0",
-        "brick/phonenumber": "^0.4"
+        "brick/phonenumber": "^0.4",
+        "michelf/php-markdown": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
