--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": ">=8.1",
         "symfony/yaml": "^6.0",
-        "symfony/string": "6.0",
+        "symfony/string": "^6.0",
         "psr/cache": "^2.0",
         "apex/container": "^2.0", 
         "league/uri": "^7.3", 
