--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,10 @@
     "require": {
         "php": ">=8.1",
         "symfony/yaml": "^6.0",
-        "symfony/string": "^6.0",
+        "symfony/string": "^6.0 | ^7.0",
         "psr/cache": "^2.0",
         "apex/container": "^2.0", 
         "league/uri": "^7.3", 
-        "apex/cluster": "^2.0",
         "brick/phonenumber": "^0.4",
         "michelf/php-markdown": "^2.0"
     },
