--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     "license": "MIT",
     "require": {
         "php": ">=8.1",
-        "symfony/yaml": "^6.0",
+        "symfony/yaml": "^6.0 | ^7.0",
         "symfony/string": "^6.0 | ^7.0",
-        "psr/cache": "^2.0",
+        "psr/cache": "^1.0 | ^2.0",
         "apex/container": "^2.0", 
         "league/uri": "^7.3", 
         "brick/phonenumber": "^0.4",
